free time + create schedule
